plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'Irumping'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
	google()
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0' //swagger
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
	implementation 'mysql:mysql-connector-java:8.0.33'

	// Firebase Admin SDK
	implementation platform('com.google.firebase:firebase-bom:32.3.0')
	implementation 'com.google.firebase:firebase-admin:9.1.1'
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core'
	testImplementation 'org.mockito:mockito-junit-jupiter'
	testImplementation 'org.assertj:assertj-core'
	implementation 'mysql:mysql-connector-java:8.0.33'

	// Firebase Admin SDK
	implementation platform('com.google.firebase:firebase-bom:32.3.0')
	implementation 'com.google.firebase:firebase-admin:9.1.1'

	// Test dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core:5.2.0'
	testImplementation 'org.mockito:mockito-inline:5.2.0' // Static mocking용
	testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
	testImplementation 'org.assertj:assertj-core:3.24.2'

	// lombok
	compileOnly 'org.projectlombok:lombok:1.18.26' // 최신 버전으로 변경 가능
	annotationProcessor 'org.projectlombok:lombok:1.18.26'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.withType(Test) {
	useJUnitPlatform() // JUnit 5 플랫폼 사용
}
